--- a/NLP_Tensorflow.ipynb
+++ b/NLP_Tensorflow.ipynb
@@ -178,6 +178,274 @@
         "print(sequences)\n",
         "print(padded_sequences)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FSCNyyhn6XV0"
+      },
+      "source": [
+        "# Part 3 - Training and Recognition"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JTmN8FjB6ct0",
+        "outputId": "4bc83d65-79a4-469a-b4cc-10e04abf84ca"
+      },
+      "outputs": [],
+      "source": [
+        "# For this part I will shamelessly steal the sample data from Tensorflows video\n",
+        "\n",
+        "!wget --no-check-certificate \\\n",
+        "    https://storage.googleapis.com/learning-datasets/sarcasm.json \\\n",
+        "    -O /tmp/sarcasm.json"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "hSiPvHFt674b"
+      },
+      "outputs": [],
+      "source": [
+        "import json\n",
+        "\n",
+        "with open(\"/tmp/sarcasm.json\", 'r') as f:\n",
+        "  datastore = json.load(f)\n",
+        "\n",
+        "headlines = []\n",
+        "labels = []\n",
+        "urls = []\n",
+        "\n",
+        "for item in datastore:\n",
+        "  headlines.append(item['headline'])\n",
+        "  labels.append(item['is_sarcastic'])\n",
+        "  urls.append(item['article_link'])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5YpSKAdG78vZ",
+        "outputId": "8873cd33-8672-430f-955d-20feea20eeee"
+      },
+      "outputs": [],
+      "source": [
+        "tokenizer = Tokenizer(oov_token=\"<NOPE>\")\n",
+        "tokenizer.fit_on_texts(headlines)\n",
+        "word_index = tokenizer.word_index\n",
+        "\n",
+        "sequences = tokenizer.texts_to_sequences(headlines)\n",
+        "padded = pad_sequences(sequences, padding='post')\n",
+        "\n",
+        "print(padded[0])\n",
+        "print(padded.shape)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "JLtnpX8W9RTE"
+      },
+      "outputs": [],
+      "source": [
+        "# I'm gonna split the dataset in a somewhat simpler way\n",
+        "\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "vocab_size = 10000\n",
+        "embedding_dim = 16\n",
+        "max_length = 100\n",
+        "test_fraction = 0.25\n",
+        "\n",
+        "headlines_train, headlines_test, labels_train, labels_test =\\\n",
+        "  train_test_split(headlines, labels, test_size=test_fraction)\n",
+        "\n",
+        "tokenizer = Tokenizer(num_words=vocab_size, oov_token=\"<NOPE>\")\n",
+        "tokenizer.fit_on_texts(headlines_train)\n",
+        "\n",
+        "word_index = tokenizer.word_index\n",
+        "\n",
+        "training_sequences = tokenizer.texts_to_sequences(headlines_train)\n",
+        "training_padded = pad_sequences(training_sequences, maxlen=max_length,\n",
+        "                                padding='post', truncating='post')\n",
+        "\n",
+        "testing_sequences = tokenizer.texts_to_sequences(headlines_test)\n",
+        "testing_padded = pad_sequences(testing_sequences, maxlen=max_length,\n",
+        "                               padding='post', truncating='post')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "-xwnuC2UCG0C"
+      },
+      "outputs": [],
+      "source": [
+        "import numpy as np\n",
+        "\n",
+        "training_padded = np.array(training_padded)\n",
+        "labels_train = np.array(labels_train)\n",
+        "testing_padded = np.array(testing_padded)\n",
+        "labels_test = np.array(labels_test)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "wntVczia_8LS"
+      },
+      "outputs": [],
+      "source": [
+        "model = tf.keras.Sequential([\n",
+        "    tf.keras.layers.Embedding(vocab_size, embedding_dim,\n",
+        "                              input_length=max_length),\n",
+        "    tf.keras.layers.GlobalAveragePooling1D(),\n",
+        "    tf.keras.layers.Dense(48, activation='relu'),\n",
+        "    tf.keras.layers.Dense(48, activation='relu'),\n",
+        "    tf.keras.layers.Dense(1, activation='sigmoid')\n",
+        "])\n",
+        "model.compile(\n",
+        "    loss='binary_crossentropy',\n",
+        "    optimizer='adam',\n",
+        "    metrics=['accuracy']\n",
+        "              )"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "rgcQwJkPAoPw",
+        "outputId": "9e115936-c744-4302-8188-0928a052c218"
+      },
+      "outputs": [],
+      "source": [
+        "model.summary()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Vpn3v7LxDnw4"
+      },
+      "outputs": [],
+      "source": [
+        "# Define some useful functions\n",
+        "import matplotlib.pyplot as plt\n",
+        "%matplotlib inline\n",
+        "from IPython.display import clear_output\n",
+        "from matplotlib.ticker import MaxNLocator\n",
+        "\n",
+        "class PlotLossAccuracy(keras.callbacks.Callback):\n",
+        "    def on_train_begin(self, logs={}):\n",
+        "        self.i = 0\n",
+        "        self.x = []\n",
+        "        self.acc = []\n",
+        "        self.losses = []\n",
+        "        self.val_losses = []\n",
+        "        self.val_acc = []\n",
+        "        self.logs = []\n",
+        "\n",
+        "    def on_epoch_end(self, epoch, logs={}):\n",
+        "\n",
+        "        self.logs.append(logs)\n",
+        "        self.x.append(int(self.i))\n",
+        "        self.losses.append(logs.get('loss'))\n",
+        "        self.val_losses.append(logs.get('val_loss'))\n",
+        "        self.acc.append(logs.get('accuracy'))\n",
+        "        self.val_acc.append(logs.get('val_accuracy'))\n",
+        "\n",
+        "        self.i += 1\n",
+        "\n",
+        "        clear_output(wait=True)\n",
+        "        plt.figure(figsize=(16, 6))\n",
+        "        plt.plot([1, 2])\n",
+        "        plt.subplot(121)\n",
+        "        plt.plot(self.x, self.losses, label=\"train loss\")\n",
+        "        plt.plot(self.x, self.val_losses, label=\"validation loss\")\n",
+        "        plt.gca().xaxis.set_major_locator(MaxNLocator(integer=True))\n",
+        "        plt.ylabel('loss')\n",
+        "        plt.xlabel('epoch')\n",
+        "        plt.title('Model Loss')\n",
+        "        plt.legend()\n",
+        "        plt.subplot(122)\n",
+        "        plt.plot(self.x, self.acc, label=\"training accuracy\")\n",
+        "        plt.plot(self.x, self.val_acc, label=\"validation accuracy\")\n",
+        "        plt.legend()\n",
+        "        plt.ylabel('accuracy')\n",
+        "        plt.xlabel('epoch')\n",
+        "        plt.title('Model Accuracy')\n",
+        "        plt.gca().xaxis.set_major_locator(MaxNLocator(integer=True))\n",
+        "        plt.show();"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 407
+        },
+        "id": "9yi1xcRuAr_H",
+        "outputId": "9ec5f90c-d3de-4c18-da75-525f4da9584f"
+      },
+      "outputs": [],
+      "source": [
+        "num_epochs = 30\n",
+        "pltCallBack = PlotLossAccuracy()\n",
+        "\n",
+        "history = model.fit(training_padded, labels_train,\n",
+        "                    epochs=num_epochs,\n",
+        "                    validation_data=(testing_padded, labels_test),\n",
+        "                    verbose=2,\n",
+        "                    callbacks=[pltCallBack]\n",
+        "                    )"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZWejpllbESd_",
+        "outputId": "9d67bc70-d392-4b54-d83b-c3891f908d60"
+      },
+      "outputs": [],
+      "source": [
+        "test_sentence = [\n",
+        "    \"granny starting to fear spiders in the garden might be real\",\n",
+        "    \"game of thrones season finale showing this sunday night\"\n",
+        "]\n",
+        "\n",
+        "test_sequences = tokenizer.texts_to_sequences(test_sentence)\n",
+        "test_padded = pad_sequences(test_sequences, maxlen=max_length,\n",
+        "                       padding='post',\n",
+        "                       truncating='post')\n",
+        "\n",
+        "print(model.predict(test_padded))"
+      ]
     }
   ],
   "metadata": {
